<resources>
    <string name="app_name">ZowiApprende</string>
    <string name="action_settings">Settings</string>
    <string name="choose_game_type_text">¿Cómo quieres jugar con Zowi?</string>
    <string name="free_game_button_text">JUEGO LIBRE\nJuego libre</string>
    <string name="guided_game_button_text">JUEGO DIRIGIDO\nJuego dirigido</string>
    <string name="progress_dialog_bluetooth_text">Estamos buscando a Zowi&#8230; ¡Será sólo un segundo!</string>

    <string name="title_activity_guided_game">GuidedGameActivity</string>
    <string name="title_activity_free_game">FreeGameActivity</string>
    <string name="title_activity_game">GameActivity</string>

    <string name="equals">=</string>

    <string name="grid_go">¡Ir!</string>

    <string name="container">CONTAINER</string>

    <string name="show_house">¡Enséñale las casas a Zowi!\n\n¡Él te indicará cuál es la suya!</string>
    <string name="guide_zowi">Guía a Zowi situando tu mano delante de sus ojos.\nCuando llegue a su casa, ¡pulsa el botón A de su espalda!</string>

    <string name="correct_operation">¡Fantástico!\nLe has ahorrado a Zowi una visita al dentista.</string>

    <string name="red">Rojo</string>
    <string name="blue">Azul</string>
    <string name="green">Verde</string>

    <string name="start">¡Comenzar!</string>

    <string name="check">¡Corregir!</string>
    <string name="display_operation">¡Enseñar!</string>

    <string name="zowi_not_found_title">¡Vaya!</string>
    <string name="zowi_not_found_text">No hemos podido contactar con Zowi\n¿Está a tu lado?\n¡Haz clic en su cara para intentarlo de nuevo!"</string>

    <string name="restart_activity_text">¡Otra vez!</string>
    <string name="finish_activity_text">¡Volver al menú!</string>
    <string name="generic_dialog_button_text">¡Vale!</string>
    <string name="zowi_checks_dialog_text">¡Enséñale la tablet a Zowi para que corrija la actividad!</string>

    <string name="logic_blocks_turn_left">Girar\nizquierda</string>
    <string name="logic_blocks_turn_right">Girar\nderecha</string>

    <string name="correct_result_1">¡Genial!\n¡Lo has logrado!</string>
    <string name="correct_result_2">¡Muy bien!\n¡Sigue así!</string>
    <string name="correct_result_3">¡Estupendo!</string>
    <string name="correct_result_4">¡Qué bien!\n¡Lo has conseguido!</string>
    <string name="correct_result_5">¡Así se hace!</string>
    <string name="correct_result_6">¡Fantástico!\n¡Sigue así!</string>
    <string name="correct_result_7">¡Lo has hecho de maravilla!</string>

    <string name="custom_alert_dialog_content_description">Imagen de Zowi en el Alert Dialog</string>
    <string name="finish_activity_dialog_content_description">Imagen de Zowi en el Dialog de finalización de actividad</string>
    <string name="logic_blocks_content_description_1">Imagen que aparece encima de Zowi</string>
    <string name="logic_blocks_content_description_2">Imagen que aparece a la izquerda de Zowi</string>
    <string name="logic_blocks_content_description_3">Imagen que aparece en el centro de la cuadrícula</string>
    <string name="logic_blocks_content_description_4">Imagen que aparece a la derecha de Zowi</string>
    <string name="logic_blocks_content_description_5">Imagen que aparece debajo de Zowi</string>
    <string name="grid_movement_cell_content_description">Celda para las flechas de dirección</string>
    <string name="food_pyramid_content_description_1">Pirámide alimenticia</string>
    <string name="food_pyramid_content_description_2">Texto de la pirámide alimenticia</string>
    <string name="grid_content_description_1">Control exterior</string>
    <string name="grid_content_description_2">Control interior</string>
    <string name="memory_content_description_1">Primera imagen del Memory</string>
    <string name="memory_content_description_2">Segunda imagen del Memory</string>
    <string name="memory_content_description_3">Tercera imagen del Memory</string>
    <string name="memory_content_description_4">Cuarta imagen del Memory</string>
    <string name="memory_content_description_5">Quinta imagen del Memory</string>
    <string name="memory_content_description_6">Sexta imagen del Memory</string>
    <string name="memory_content_description_7">Séptmia imagen del Memory</string>
    <string name="memory_content_description_8">Ocatva imagen del Memory</string>
    <string name="music_dictation_content_description">Dicatdo musical</string>
    <string name="operations_main_image_content_description">Imagen principal</string>
    <string name="operations_2_operator_image_1_content_description">Imagen del primer operador</string>
    <string name="operations_2_operator_image_2_content_description">Imagen del segundo operador</string>
    <string name="operations_2_result_image_content_description">Imagen del resultado</string>
    <string name="seeds_container_1_content_description">Primer contenedor de semillas</string>
    <string name="seeds_container_2_content_description">Segundo contenedor de semillas</string>
    <string name="seeds_container_3_content_description">Tercer contenedor de semillas</string>
    <string name="seeds_container_4_content_description">Cuarto contenedor de semillas</string>
    <string name="zowi_eyes_image_content_description">Celda de la cuadrícula de imágenes</string>
    <string name="guide_image_content_description">Imágen de una casa</string>
    <string name="coloradd_green_content_description">Código del color verde para daltónicos</string>
    <string name="coloradd_red_content_description">Código del color rojo para daltónicos</string>
</resources>
