<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="zowiapp.zowi.marco.zowiapp.MainActivityFragment"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:id="@+id/chooseGameTypeText"
        android:text="@string/choose_game_type_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <zowiapp.zowi.marco.zowiapp.layout.SquareButton
            style="@style/squareButton"
            android:layout_margin="20dp"
            android:background="@drawable/fondo_verde"
            android:id="@+id/freeGameButton"
            android:text="@string/free_game_button_text"/>

        <zowiapp.zowi.marco.zowiapp.layout.SquareButton
            style="@style/squareButton"
            android:layout_margin="20dp"
            android:background="@drawable/fondo_rojo"
            android:id="@+id/guidedGameButton"
            android:text="@string/guided_game_button_text"
            android:onClick="toGuidedGame"/>

    </LinearLayout>

</LinearLayout>
