<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/operations_dialog_width"
    android:layout_height="@dimen/operations_dialog_height"
    android:background="@drawable/alert_dialog_shape"
    android:padding="@dimen/operations_dialog_padding">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/operations_dialog_guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingBottom="@dimen/button_border_width">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/correct_operation_text"
            android:textSize="@dimen/operations_dialog_text_size"
            android:textColor="@color/black"
            android:textAlignment="center"/>

        <ImageView
            android:contentDescription="@string/finish_activity_dialog_content_description"
            android:id="@+id/finish_dialog_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/zowi_happy_open_small"
            android:paddingTop="@dimen/button_border_width" />

    </LinearLayout>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/operations_dialog_guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/restart_activity_button"
        android:background="@drawable/radius_button_zowi_color"
        android:text="@string/restart_activity_text"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/operations_dialog_guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/finish_activity_button"
        app:layout_constraintDimensionRatio="2:1"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/finish_activity_button"
        android:background="@drawable/radius_button_zowi_color"
        android:text="@string/finish_activity_text"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/operations_dialog_guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/restart_activity_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintDimensionRatio="2:1"/>

</android.support.constraint.ConstraintLayout>