<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/grid"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/answers_container">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/red"/>

                <View
                    android:layout_width="@dimen/operator_side"
                    android:layout_height="@dimen/operator_side"
                    android:background="@color/red"/>

                <EditText
                    android:layout_width="@dimen/operator_side"
                    android:layout_height="@dimen/operator_side"
                    android:tag="RED"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blue"/>

                <View
                    android:layout_width="@dimen/operator_side"
                    android:layout_height="@dimen/operator_side"
                    android:background="@color/blue"/>

                <EditText
                    android:layout_width="@dimen/operator_side"
                    android:layout_height="@dimen/operator_side"
                    android:tag="BLUE"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/green"/>

                <View
                    android:layout_width="@dimen/operator_side"
                    android:layout_height="@dimen/operator_side"
                    android:background="@color/green"/>

                <EditText
                    android:layout_width="@dimen/operator_side"
                    android:layout_height="@dimen/operator_side"
                    android:tag="GREEN"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
